<resources>
    <string name="app_name">CryptoProject</string>
    <string name="loginText">Crypto Tracker</string>
    <string name="loginButton">Giriş Yap</string>
    <string name="signUp">Kayıt Ol</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="email">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="signUpBack">Zaten hesabınız varsa,Buraya tıklayın!</string>
    <string name="name">İsim</string>
    <string name="convert">Hesapla</string>
    <string name="cevir">İşlemi ters çevir</string>
    <string name="yorum">Yorum Yap</string>
    <string name="username">Kullanıcı Adı : </string>
    <string name="date">Tarih : </string>
    <string name="yorum1">yorum yap</string>
    <string name="detay">Daha fazla detay için tıklayın </string>
    <string name="donustur">Elinizdeki para kaç %1$s öğrenin! </string>
    <string name="donusturTers">Elinizdeki %1$s kaç para ediyor öğrenin! </string>
    <string name="donusturSonuc"> %1$f %2$s alabilirsiniz! </string>
    <string name="donusturSonucTers"> %1$f dolar ödemeniz gerekli! </string>
    <string name="emirVer">Fiyat takibi oluştur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>