<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#feb209"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="15.7dp"
        android:layout_marginBottom="95dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="458dp"
            android:orientation="vertical"
            android:paddingLeft="20.7dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="442dp"
                android:background="@drawable/white_cueve_bg" />


            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20.7dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57.7dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/loginText"
                    android:textColor="#030303"
                    android:textSize="31.3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/email"
                    android:textColor="#c2c2c2"
                    android:textSize="13.3sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginRight="44.3dp"
                    android:background="#d5d5d5" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30.3dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/password"
                    android:textColor="#c2c2c2"
                    android:textSize="13.3sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11.7dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingRight="44.3dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginRight="44.3dp"
                    android:background="#d5d5d5" />


                <LinearLayout
                    android:layout_width="148dp"
                    android:id="@+id/loginButton"
                    android:layout_height="30dp"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="18.7dp"
                        android:layout_height="15.3dp"
                        android:src="@drawable/black_arrow" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta"
                    android:text="@string/rememberMe" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="36dp"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="41dp"
                android:layout_height="26dp"
                android:layout_weight="1"
                android:src="@drawable/en" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="11dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/turk" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/signupButton"
                android:fontFamily="@font/allerta"
                android:gravity="center_horizontal"
                android:text="@string/signUp"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>